# identified-flying-objects

./: .gitignore  README.md  debug_camera_settings.py  debug_compare_approaches.py  debug_fix_camera.py  debug_fps_test.py  debug_resolution_sweep.py  debug_snapshot_bench.py  debug_sync_jitter.py  kafka_config.properties  kafka_message_inspector.py  main.py  pyproject.toml  step1_video.py  step2_motion.py  step3_kafka_producer.py  step3_motion_bbox.py  step4_processing_consumer.py  step5_sync_producer.py  test_control.py
firmware/: ETH_Web_CAM_original.ino  hostname.h
scripts/: init_db.py
server/: camera_relay.py  pyproject.toml  server_setup.sh
server/service_files/: camera_relay.service
src/classification/: classifier.py
src/core/: config.py
src/database/: db.py  models.py
src/detection/: detector.py
src/pipeline/: runner.py
src/scheduler/: jobs.py
src/tracking/: tracker.py
src/ui/: app.py
